--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: jekyll-rtd-theme
-description: Just another documentation theme compatible with GitHub Pages
+title: Documentation Dictionary
+description: Collection of Documents
 
 theme: null
 
