--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Documentation Dictionary
 description: Collection of Documents
 
-theme: null
+theme: jekyll-theme-cayman
 
 # debug:
 #   compress: true
